# Invoicer

./: .gitignore  LICENSE  README.md  pyproject.toml
invoice_app/: api.py  app.py  invoice_logic.py
